feat: add jlink image creation plugin